# transcoderr

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  TODO.md  clippy.toml  rustfmt.toml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: general-coding.instructions.md  github-actions.instructions.md  rust-utility.instructions.md  security.instructions.md  shell.instructions.md  test-generation.instructions.md
.github/workflows/: ci.yml
benches/: transcode_benchmark.rs
scripts/: generate_test_media.py
src/: main.rs
testdata/: test_bars_480p_h265_opus.mkv
tests/: integration_tests.rs
tests/common/: mod.rs
